# substreams-inscriptions

./: .gitignore  Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
.github/workflows/: substreams.yml  test.yml
proto/v1/: inscriptions.proto
src/: api.rs  helpers.rs  indexes.rs  keys.rs  lib.rs  maps.rs  sinks.rs  stores.rs
src/pb/: inscriptions.types.v1.rs  mod.rs
