[package]
name = "inscriptions"
version = "0.1.0"
description = "Inscriptions"
edition = "2021"
authors = [
    "Sam <sam@pinax.network>",
    "Denis <denis@pinax.network>",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0"
prost = "0.11"
prost-types = "0.11"
num-bigint = "0.4"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-database-change = "1.3"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9"
